docs: update TP api (2024) update status && tests
